Show correct cursor on small buttons

--- a/src/dibgram/ui/elements/small-button.scss
+++ b/src/dibgram/ui/elements/small-button.scss
@@ -8,6 +8,7 @@ button.small-button {
     font-family: var(--font-family);
     font-weight: 500;
     font-size: 14px;
+    cursor: pointer;
 
     &:hover {
         background-color: var(--theme-color-lightButtonBgOver);
